--- a/crmapp/frontend/src/app/components/agreement/agreement-details/agreement-details.component.html
+++ b/crmapp/frontend/src/app/components/agreement/agreement-details/agreement-details.component.html
@@ -1,44 +1,17 @@
-<nav class="breadcrumb">
-	<div class="row">
-		<div class="col">
-			<h5>
-				<strong>
-					<a class="breadcrumb-item" [routerLink]="['../']">
-						<i class="fa fa-users"></i> Договоры
-					</a>
-					<span class="breadcrumb-item active">№ {{agreement?.number}} от {{agreement?.dateStart | date: 'dd.MM.y'}}</span>
-				</strong>
-			</h5>
-		</div>
+<div class="ui-g">
+	<div class="ui-g-4">
+		<button pButton type="button" label="Вернуться" class="ui-button-info"
+			icon="fa-arrow-circle-o-left" routerLink="../">
+		</button>
 	</div>
-</nav>
-
-<div>
-	
+	<div class="ui-g-8">
+		<h4 style="font-weight:normal">
+			<b><ins>Договор № {{agreement.number}} от {{agreement.dateStart}}</ins></b>
+		</h4>
+	</div>
 </div>
 
-<p>
-    
-  <ul class="nav nav-tabs nav-fill">
-  
-    <li class="nav-item">
-      <a class="nav-link" 
-        routerLinkActive="active"
-          routerLink="main">
-        <i class="fa fa-address-card-o">
-          </i> <strong>Основные данные</strong>
-      </a>
-    </li>
-    <li class="nav-item"  >
-      <a class="nav-link"
-        routerLinkActive="active"
-        routerLink="documents">
-        <i class="fa fa-file-text-o">
-          </i> <strong>Связанные документы</strong>
-      </a>
-    </li>
-    
-  </ul>
-
-  <router-outlet></router-outlet>
-  
+<div>
+	<app-agreement-details-tabs></app-agreement-details-tabs>
+	<router-outlet></router-outlet>
+</div>
