FE: minor changes

--- a/crmapp/frontend/src/app/components/agreement/edit-agreement/edit-agreement.component.html
+++ b/crmapp/frontend/src/app/components/agreement/edit-agreement/edit-agreement.component.html
@@ -1,3 +1,9 @@
-<p>
-  edit-agreement works!
-</p>
+<div class="ui-g-12">
+  <div class="ui-g-12">
+    <p-card>
+      <p>
+        edit-agreement works!
+      </p>
+    </p-card>
+  </div>
+</div>
