--- a/crmapp/frontend/src/app/components/agreement/edit-agreement/edit-agreement.component.html
+++ b/crmapp/frontend/src/app/components/agreement/edit-agreement/edit-agreement.component.html
@@ -1,9 +1,8 @@
-<div class="ui-g-12">
+
   <div class="ui-g-12">
     <p-card>
-      <p>
-        edit-agreement works!
-      </p>
+        <h3 class="first">Название</h3>
+        <input id="input" type="text" size="30" pInputText [(ngModel)]="text"> 
     </p-card>
   </div>
-</div>
+
