FE: 'editButtonTitle' property in template table, components use it

--- a/crmapp/frontend/src/app/components/client/client-details/client-details-agreements-tab/client-details-agreements-tab.component.html
+++ b/crmapp/frontend/src/app/components/client/client-details/client-details-agreements-tab/client-details-agreements-tab.component.html
@@ -1,5 +1,5 @@
 <app-client-details-template-table [addButtonTitle]="['Новый договор']"
-  [columns]="columns" [datasource]="agreements" 
+  [columns]="columns" [datasource]="agreements" [editButtonTitle]="['Подробнее']"
   [responsive]="true" [reorderableColumns]="true" 
   [rows]="0" [paginator]="false" [rowHover]="true" 
   [loading]="true" [sortField]="id" 
