--- a/crmapp/frontend/src/app/components/client/client-details/client-details-addresses-tab/client-details-addresses-tab.component.html
+++ b/crmapp/frontend/src/app/components/client/client-details/client-details-addresses-tab/client-details-addresses-tab.component.html
@@ -1,5 +1,5 @@
 <app-client-details-template-table [addButtonTitle]="['Новый адрес']"
-  [columns]="columns" [datasource]="addresses" 
+  [columns]="columns" [datasource]="addresses" [editButtonTitle]="['Изменить']" 
   [responsive]="true" [reorderableColumns]="true" 
   [rows]="0" [paginator]="false" [rowHover]="true" 
   [loading]="true" [sortField]="id" 
