--- a/crmapp/frontend/src/app/components/client/client-details/client-details-directors-tab/client-details-directors-tab.component.html
+++ b/crmapp/frontend/src/app/components/client/client-details/client-details-directors-tab/client-details-directors-tab.component.html
@@ -1,5 +1,5 @@
 <app-client-details-template-table [addButtonTitle]="['Добавить']"
-  [columns]="columns" [datasource]="directors" 
+  [columns]="columns" [datasource]="directors" [editButtonTitle]="['Изменить']"
   [responsive]="true" [reorderableColumns]="true" 
   [rows]="0" [paginator]="false" [rowHover]="true" 
   [loading]="true" [sortField]="id" 
