FE: fix in title

--- a/crmapp/frontend/src/app/components/agreement/agreement-details/agreement-details.component.html
+++ b/crmapp/frontend/src/app/components/agreement/agreement-details/agreement-details.component.html
@@ -6,7 +6,7 @@
 	</div>
 	<div class="ui-g-8">
 		<h4 style="font-weight:normal">
-			<b><ins>Договор № {{agreement.number}} от {{agreement.dateStart}}</ins></b>
+			<b><ins>Договор № {{agreement.number}} от {{agreement.dateStart | date: 'dd.MM.y'}}</ins></b>
 		</h4>
 	</div>
 </div>
