--- a/crmapp/frontend/src/app/components/agreement/edit-agreement/edit-agreement.component.html
+++ b/crmapp/frontend/src/app/components/agreement/edit-agreement/edit-agreement.component.html
@@ -1,8 +1,72 @@
+<p-growl [value]="msgs"></p-growl>
 
-  <div class="ui-g-12">
-    <p-card>
-        <h3 class="first">Название</h3>
-        <input id="input" type="text" size="30" pInputText [(ngModel)]="text"> 
-    </p-card>
+<p-confirmDialog header="Confirmation" icon="fa fa-question-circle" width="425" #cd>
+  <p-footer>
+      <button type="button" pButton icon="fa-check" 
+        class="ui-button-primary" label="Ок" (click)="cd.accept()"></button>
+      <button type="button" pButton icon="fa-close" 
+        class="ui-button-secondary" label="Отмена" (click)="cd.reject()"></button>
+  </p-footer>
+</p-confirmDialog>
+
+<div class="ui-g-12">
+    <form form (ngSubmit)="onSubmit()">
+      <div class="ui-g-10">
+        <p-card>
+          <div class="ui-grid ui-grid-responsive ui-grid-pad ui-fluid" style="margin: 10px 0px">
+            <div class="ui-grid-row">
+              <div class="ui-grid-col-3">
+                <b>Номер договора:</b>
+              </div>
+              <div class="ui-grid-col-6">
+                <input pInputText type="text" name="number" placeholder=""
+                  [(ngModel)]="agreement&&agreement.number">
+              </div>
+            </div>
+            <div class="ui-grid-row">
+              <div class="ui-grid-col-3">
+                <b>Клиент:</b>
+              </div>
+              <div class="ui-grid-col-6">
+                  <p-dropdown [options]="clients" [(ngModel)]="agreement&&agreement.client" name="client" 
+                    optionLabel="title" [autoWidth]="false" placeholder="Выберите клиента...">
+                  </p-dropdown>
+              </div>
+            </div>
+            <div class="ui-grid-row">
+              <div class="ui-grid-col-3">
+                <b>Дата:</b>
+              </div>
+              <div class="ui-grid-col-3">
+                <p-calendar [(ngModel)]="agreement&&agreement.dateStart" name="dateStart" placeholder="Дата"
+                  [monthNavigator]="true" [yearNavigator]="true" yearRange="{{years}}" [locale]="ru" 
+                  showButtonBar="true" [showIcon]="true" dateFormat="dd.mm.yy"></p-calendar>
+              </div>
+            </div>
+            <div class="ui-grid-row">
+                <div class="ui-grid-col-3">
+                  <b>Примечание:</b>
+                </div>
+                <div class="ui-grid-col-6">
+                  <textarea rows="3" pInputTextarea type="text"></textarea>
+                </div>
+              </div>
+          </div>
+        </p-card>
+      </div>
+      <div class="ui-g-2">
+        <button pButton type="button" label="Вернуться" 
+          class="ui-button-info btn-block" icon="fa-arrow-circle-o-left"
+          [routerLink]="['../']">
+        </button>
+        <button pButton type="submit" label="Сохранить"
+          class="ui-button-success btn-block" icon="fa-check-square-o">
+        </button>
+        <button pButton type="button" label="Удалить" 
+          class="ui-button-danger btn-block" icon="fa-trash-o"
+          (click)="confirmDeleting()">
+        </button>
+      </div>
+    </form>
   </div>
 
