--- a/crmapp/frontend/src/app/components/employee/employee-details/employee-details-addresses-tab/employee-details-addresses-tab.component.html
+++ b/crmapp/frontend/src/app/components/employee/employee-details/employee-details-addresses-tab/employee-details-addresses-tab.component.html
@@ -1,60 +1,7 @@
-<p>
-
-<div class="row">
-  <div class="col-md-10">
-    <table *ngIf="addresses?.length > 0; else noAddresses"
-      class="table table-sm">
-
-      <thead class="thead-default">
-        <tr>
-          <th class="text-center">ID</th>
-          <th class="text-center">Адрес</th>
-          <th class="text-center">Действует с</th>
-          <th class="text-center"></th>
-        </tr>
-      </thead>
-      
-      <tr *ngFor="let address of addresses">
-        
-        <td class="text-center" >{{address.id}}</td>
-        <td class="text-center" >{{address.presentation}}</td>
-        <td class="text-center" >{{address.dateStart | date: 'dd.MM.y'}}</td>
-        <td>
-          <div class="d-flex justify-content-end">
-            <div class="btn-toolbar" role="toolbar" aria-label="Toolbar with button groups">
-              <div class="btn-group mr-2" role="group" aria-label="First group">
-              <!-- Button trigger modal -->
-                <button type="button" class="btn btn-success btn-sm" >
-                  <i class="fa fa-edit"></i> Изменить
-                </button>
-              </div>
-              
-              <div class="btn-group mr-2" role="group" aria-label="Second group">
-                <form action="companyAddress" method="post">
-                  <input type="hidden" name="delete"> 
-                  <input type="hidden" name="id" value="">
-                  
-                  <button type="submit" class="btn btn-danger btn-sm">
-                    <i class="fa fa-trash-o"></i> Удалить
-                  </button>
-                </form>
-              </div>
-            </div>
-          </div>
-        </td>
-      </tr>
-    </table>
-
-    <ng-template #noAddresses>
-      <hr>
-      <h5 class="text-center">Нет ни одного адреса в системе...</h5>
-    </ng-template>
-    
-  </div>
-  <div class="col-md-2">
-    <button type="button" class="btn btn-primary btn-block">
-      <i class="fa fa-plus"></i> Новый адрес
-    </button>
-  </div>
-</div>
-
+<app-client-employee-details-template-table [addButtonTitle]="['Новый адрес']"
+  [columns]="columns" [datasource]="addresses" [editButtonTitle]="['Изменить']" 
+  [responsive]="true" [reorderableColumns]="true" 
+  [rows]="0" [paginator]="false" [rowHover]="true" 
+  [loading]="true" [sortField]="id" 
+  [autoLayout]="true">
+</app-client-employee-details-template-table>
