--- a/crmapp/frontend/src/app/components/agreement/add-agreement/add-agreement.component.html
+++ b/crmapp/frontend/src/app/components/agreement/add-agreement/add-agreement.component.html
@@ -8,7 +8,7 @@
   </div>
   <div class="ui-g-8">
     <h4 style="font-weight:normal">
-      <b><ins>Новый Договор</ins></b>
+      <b><ins>Договор [без названия]</ins></b>
     </h4>
   </div>
 </div>
@@ -16,7 +16,7 @@
 <p-tabMenu [model]="tabs"></p-tabMenu>
 
 <div class="ui-g-12">
-  <form form (ngSubmit)="onSubmit()">
+  <form [formGroup]="userform" (ngSubmit)="onSubmit()">
     <div class="ui-g-10">
       <p-card>
         <div class="ui-grid ui-grid-responsive ui-grid-pad ui-fluid" style="margin: 10px 0px">
@@ -25,8 +25,15 @@
               <b>Номер договора:</b>
             </div>
             <div class="ui-grid-col-6">
-              <input pInputText type="text" name="number" placeholder=""
-                [(ngModel)]="agreement&&agreement.number">
+              <input pInputText type="text" placeholder=""
+                [(ngModel)]="agreement.number" formControlName="number">
+            </div>
+            <div class="ui-grid-col-3">
+              <div class="ui-message ui-messages-error ui-corner-all" 
+                *ngIf="userform.controls['number'].invalid&&userform.controls['number'].dirty">
+                  <i class="fa fa-exclamation-circle"></i>
+                  Введите название договора (не менее 2 символов)!
+              </div>            
             </div>
           </div>
           <div class="ui-grid-row">
@@ -34,9 +41,15 @@
               <b>Клиент:</b>
             </div>
             <div class="ui-grid-col-6">
-                <p-dropdown [options]="clients" [(ngModel)]="agreement&&agreement.client" name="client" 
-                  optionLabel="title" [autoWidth]="false" placeholder="Выберите клиента..." [filter]="true">
+                <p-dropdown [options]="clients" [(ngModel)]="agreement.client"  
+                  optionLabel="title" [autoWidth]="false" placeholder="Выберите клиента..." 
+                  [filter]="true" formControlName="client">
                 </p-dropdown>
+                <div class="ui-message ui-messages-error ui-corner-all" 
+                  *ngIf="userform.controls['client'].value === null">
+                    <i class="fa fa-exclamation-circle"></i>
+                    Необходимо выбрать клиента!
+                </div>
             </div>
           </div>
           <div class="ui-grid-row">
@@ -44,7 +57,7 @@
               <b>Дата:</b>
             </div>
             <div class="ui-grid-col-3">
-              <p-calendar [(ngModel)]="agreement&&agreement.dateStart" name="dateStart" placeholder="Дата"
+              <p-calendar [(ngModel)]="agreement.dateStart" formControlName="dateStart" placeholder="Дата"
                 [monthNavigator]="true" [yearNavigator]="true" yearRange="{{years}}" [locale]="ru" 
                 showButtonBar="true" [showIcon]="true" dateFormat="dd.mm.yy"></p-calendar>
             </div>
@@ -54,14 +67,16 @@
                 <b>Примечание:</b>
               </div>
               <div class="ui-grid-col-6">
-                <textarea [rows]="3" pInputTextarea [(ngModel)]="agreement&&agreement.comment" name="comment"></textarea>
+                <textarea [rows]="3" pInputTextarea [(ngModel)]="agreement.comment" 
+                  formControlName="comment">
+                </textarea>
               </div>
             </div>
         </div>
       </p-card>
     </div>
     <div class="ui-g-2">
-      <button pButton type="submit" label="Записать"
+      <button pButton type="submit" label="Записать" [disabled]="!userform.valid"
         class="ui-button-success btn-block" icon="fa-check-square-o">
       </button>
       <button pButton type="button" label="Отмена" 
