--- a/crmapp/frontend/src/app/components/client/clients/clients.component.html
+++ b/crmapp/frontend/src/app/components/client/clients/clients.component.html
@@ -1,8 +1,7 @@
 <app-dashboard-table [title]="['Клиенты']" 
-    [columns]="columns" [datasource]="clients" 
+    [columns]="columns" [datasource]="clients" [autoLayout]="true" 
     [responsive]="true" [reorderableColumns]="true" 
     [rows]="0" [paginator]="false" [rowHover]="true" 
     [loading]="true" [menuModel]="items" [sortField]="id" 
-    [autoLayout]="true"
-    >
+    addButtonTitle="Новый" editButtonTitle="Редакт." additionalButtonTitle="Прочее">
 </app-dashboard-table>
