--- a/crmapp/frontend/src/app/components/dashboard/dashboard-table/dashboard-table.component.html
+++ b/crmapp/frontend/src/app/components/dashboard/dashboard-table/dashboard-table.component.html
@@ -12,10 +12,10 @@
         [loading]="loading" dataKey="id">
         <ng-template pTemplate="caption">
             <div>
-                <button pButton type="button" label="Новый" style="margin-top:2px;float:left" 
+                <button pButton type="button" label="{{addButtonTitle}}" style="margin-top:2px;float:left" 
                     [routerLink]="['add']" icon="fa-plus">
                 </button>
-                <button pButton type="button" label="Редакт." style="margin-left:2px;margin-top:2px;float:left" 
+                <button pButton type="button" label="{{editButtonTitle}}" style="margin-left:2px;margin-top:2px;float:left" 
                     (click)="goToEntry(selectedItem?.url)" icon="fa-edit" class="ui-button-success" [disabled]="!selectedItem">
                 </button>
                 <p-tieredMenu #menu [model]="menuModel" [popup]="true" 
@@ -23,7 +23,7 @@
                 </p-tieredMenu>
                 <button *ngIf="menuModel?.length > 0"
                     #btn pButton type="button" icon="fa-list" class="ui-button-info" 
-                    style="margin-left:2px;margin-top:2px;float:left" label="Прочее"
+                    style="margin-left:2px;margin-top:2px;float:left" label="{{additionalButtonTitle}}"
                     (click)="menu.toggle($event)" (mousedown)="initMenu(selectedItem?.id)" [disabled]="!selectedItem">
                 </button>
             </div>
