--- a/crmapp/frontend/src/app/components/employee/employees/employees.component.html
+++ b/crmapp/frontend/src/app/components/employee/employees/employees.component.html
@@ -2,5 +2,6 @@
     [columns]="columns" [datasource]="employees" 
     [responsive]="true" [reorderableColumns]="true" 
     [rows]="0" [paginator]="false" [rowHover]="true" 
-    [loading]="true" [menuModel]="items">
+    [loading]="true" [menuModel]="items"
+    addButtonTitle="Новый" editButtonTitle="Редакт." additionalButtonTitle="Прочее">
 </app-dashboard-table>
