--- a/crmapp/frontend/src/app/components/person/persons/persons.component.html
+++ b/crmapp/frontend/src/app/components/person/persons/persons.component.html
@@ -2,5 +2,6 @@
     [columns]="columns" [datasource]="persons" 
     [responsive]="true" [reorderableColumns]="true" 
     [rows]="0" [paginator]="false" [rowHover]="true" 
-    [loading]="true" [menuModel]="items">
+    [loading]="true" [menuModel]="items"
+    addButtonTitle="Новый" editButtonTitle="Подробнее" additionalButtonTitle="Прочее">
 </app-dashboard-table>
