FE: new @Input 'routerLinkUrl' parameter, added it in views

--- a/crmapp/frontend/src/app/templates/client-employee-details-template-table/client-employee-details-template-table.component.html
+++ b/crmapp/frontend/src/app/templates/client-employee-details-template-table/client-employee-details-template-table.component.html
@@ -43,7 +43,7 @@
   <div class="ui-g-2">
     <button pButton type="button" label="{{addButtonTitle}}" 
       class="ui-button-primary btn-block" icon="fa fa-plus-circle"
-      [routerLink]="['add']">
+      [routerLink]="routerLinkUrl">
     </button>
     <button pButton type="button" label="{{editButtonTitle}}" 
       class="ui-button-success btn-block" icon="fa fa-edit" [disabled]="!selectedItem"
