--- a/crmapp/frontend/src/app/components/client/client-details/client-details-accounts-tab/client-details-accounts-tab.component.html
+++ b/crmapp/frontend/src/app/components/client/client-details/client-details-accounts-tab/client-details-accounts-tab.component.html
@@ -2,6 +2,6 @@
   [columns]="columns" [datasource]="accounts" [editButtonTitle]="['Изменить']"
   [responsive]="true" [reorderableColumns]="true" 
   [rows]="0" [paginator]="false" [rowHover]="true" 
-  [loading]="true" [sortField]="id" 
+  [loading]="true" [sortField]="id" [routerLinkUrl]="['add']"
   [autoLayout]="true">
 </app-client-employee-details-template-table>
