--- a/crmapp/frontend/src/app/components/client/client-details/client-details-agreements-tab/client-details-agreements-tab.component.html
+++ b/crmapp/frontend/src/app/components/client/client-details/client-details-agreements-tab/client-details-agreements-tab.component.html
@@ -2,6 +2,6 @@
   [columns]="columns" [datasource]="agreements" [editButtonTitle]="['Подробнее']"
   [responsive]="true" [reorderableColumns]="true" 
   [rows]="0" [paginator]="false" [rowHover]="true" 
-  [loading]="true" [sortField]="id" 
+  [loading]="true" [sortField]="id" [routerLinkUrl]="['/agreements','add']"
   [autoLayout]="true">
 </app-client-employee-details-template-table>
