FE: minor fixes

--- a/crmapp/frontend/src/app/components/agreement/agreement-details/agreement-details-main-tab/agreement-details-main-tab.component.html
+++ b/crmapp/frontend/src/app/components/agreement/agreement-details/agreement-details-main-tab/agreement-details-main-tab.component.html
@@ -20,7 +20,7 @@
             <div class="ui-g-4 ui-sm-6"><b>Дата:</b></div>
             <div class="ui-g-8 ui-sm-6">{{agreement?.dateStart | date: 'dd.MM.y'}}</div>
             <div class="ui-g-4 ui-sm-6"><b>Клиент:</b></div>
-            <div class="ui-g-8 ui-sm-6">{{agreement?.client?.title}}</div>
+            <div class="ui-g-8 ui-sm-6">{{agreement?.clientTitle}}</div>
             <div class="ui-g-4 ui-sm-6"><b>Примечание:</b></div>
             <div class="ui-g-8 ui-sm-6"><i>{{agreement?.comment}}</i></div>
           </div>
